    generated by Santana Saha (Sebastiano Caravati)
  * EPW: Automatic documentation using Ford
  * EPW: Restart after epmatwp1 is written with arbitrary number of cores
  * EPW: Electron and Phonon bandstructure can now be computed using band_plot
         with etf_mem true or false.
  * EPW: The test-farm now checks 5 representative examples and the associated
         accuracy
  * Netlib BLAS and LAPACK updated, easy to update going forward

Fixed in 6.0 version:

  * TDDFPT, PWCOND, GWW: redirection to /dev/null broke Windows executable
    (commit 12357)
  * PDOS in the noncolinear case was broken by recent changes in indexing 
    (courtesy Mitsuaki Kawamura) (commit (12366)
  * Incorrect format (old version) of the dynamical matrix if ibrav=0 in PHCG
    (commit 12367,12369) and incorrect format if more than 99 atoms
    (commit 12393) (courtesy Shaofeng Wang)
  * disk_io='high' crashing in MD runs (courtesy David Strubbe)
    (commit 12388)
  * Fix for NEB+hybrid functionals (courtesy Davide Colleoni)
    (commit 12391)
  * Incorrect Wyckoff site labels for group #138, origin_choice=2
    (courtesy Marton Voros) (commit 12426)
  * PHonon: support for Goedecker-Hutter-Teter pseudopotentials was missing
    (courtesy of Sebastiano Caravati)
  * turboTDDFPT: Problem if empty states were also computed. 
  * NEB did not recognize its own input if white spaces were present at the
    right of NEB cards (commit 12816)
  * startingwfc='file' with wavefunctions in collected format could yield a 
    bogus "unit not open" error (commit 12913)
  * PW and CP: possible out-of-bound error in TS-vdW due to incorrect 
    allocation of array UtsvdW (commit 12917)
  * EPW: Correct Wannier localization with spinors
  * EPW: Correct Wannier localization with spinors
  * EPW: Electronic velocities in the local approximation now works correctly
    with skipped bands and spin-orbit coupling

Incompatible changes in 6.0 version:

  * Support for AIX removed